--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         /* --- RESET Y ESTILOS GLOBALES --- */
         :root {
-            --color-primario: #0B1B2A; /* Azul oscuro del logo */
-            --color-secundario: #D4A017; /* Dorado/Ámbar del logo */
+            --color-primario: #151354; /* Azul oscuro del logo */
+            --color-secundario: #12C2AE; /* Dorado/Ámbar del logo */
             --color-texto: #333333;
             --color-fondo: #f9f9f9;
             --fuente-principal: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
@@ -138,7 +138,7 @@
 <body>
 
     <header class="hero">
-        <img src="Logo_KAIROS.jpg" alt="Logo KairosPy" class="logo">
+        <img src="Logo_KAIROS.png" alt="Logo KairosPy" class="logo">
         <p class="concepto">Del griego (καιρός): el momento oportuno, el momento adecuado.</p>
         <p class="tagline">
             Somos el momento exacto que necesitas para superar ese obstáculo que te impide avanzar o para acelerar tu crecimiento.
