--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <h2>Marcas que han confiado en nuestra experiencia</h2>
                 <p>A lo largo de mi carrera, he tenido el privilegio de aportar valor a empresas líderes, tanto de forma directa como a través de consultoras de primer nivel como KPMG.</p>
                 <div class="logos-grid">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Santander_Logotipo.svg/2560px-Santander_Logotipo.svg.png" alt="Logo Santander">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Banco_Santander_Logotipo.svg" alt="Logo Santander">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/Repsol_logo.svg/2560px-Repsol_logo.svg.png" alt="Logo Repsol">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8e/Acciona_logo.svg/2560px-Acciona_logo.svg.png" alt="Logo Acciona">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Telef%C3%B3nica_logo.svg/2560px-Telef%C3%B3nica_logo.svg.png" alt="Logo Telefónica">
