--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         :root {
             --color-primario: #151354; /* Azul oscuro del logo */
             --color-secundario: #12C2AE; /* Dorado/Ámbar del logo */
+            --color-dorado-claro: #FDF8E1; /* Nuevo: Tono dorado claro para el banner */
             --color-texto: #333333;
             --color-fondo: #f9f9f9;
             --fuente-principal: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
@@ -40,27 +41,32 @@
 
         /* --- SECCIÓN HERO (INTRODUCCIÓN) --- */
         .hero {
-            background-color: var(--color-primario);
-            color: #ffffff;
-            text-align: center;
-            padding: 5rem 2rem;
+            background-color: var(--color-dorado-claro);
+            color: var(--color-texto);
+            padding: 2rem 0;
+        }
+        .hero .container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 3rem;
         }
         .hero .logo {
-            max-width: 250px;
-            margin-bottom: 2rem;
+            max-width: 200px;
+            margin-bottom: 0;
+            flex-shrink: 0;
         }
         .hero .concepto {
             font-style: italic;
-            color: #cccccc;
+            color: #555;
             font-size: 1.2rem;
-            margin-bottom: 1.5rem;
+            margin-bottom: 1rem;
         }
         .hero .tagline {
             font-size: 1.3rem;
             font-weight: 300;
             max-width: 700px;
-            margin: 0 auto;
-            color: #f0f0f0;
+            color: var(--color-texto);
         }
 
         /* --- SECCIÓN "POR QUÉ NOSOTROS" --- */
@@ -138,11 +144,15 @@
 <body>
 
     <header class="hero">
-        <img src="Logo_KAIROS-sin fondo.png" alt="Logo KairosPy" class="logo">
-        <p class="concepto">Del griego (καιρός): el momento oportuno, el momento adecuado.</p>
-        <p class="tagline">
-            Somos el momento exacto que necesitas para superar ese obstáculo que te impide avanzar o para acelerar tu crecimiento.
-        </p>
+        <div class="container">
+            <img src="Logo_KAIROS-sin fondo.png" alt="Logo KairosPy" class="logo">
+            <div>
+                <p class="concepto">Del griego (καιρός): el momento oportuno, el momento adecuado.</p>
+                <p class="tagline">
+                    Somos el momento exacto que necesitas para superar ese obstáculo que te impide avanzar o para acelerar tu crecimiento.
+                </p>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -186,7 +196,7 @@
                 <div class="logos-grid">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Banco_Santander_Logotipo.svg" alt="Logo Santander">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Repsol_logo.svg" alt="Logo Repsol">
-                    <img src="https://es.wikipedia.org/wiki/Archivo:Acciona_logo.svg" alt="Logo Acciona">
+                    <img src="Acciona_logo.svg" alt="Logo Acciona">
                     <img src="telefonica-5.svg" alt="Logo Telefónica">
                     <img src="nh-hotels.svg" alt="Logo NH Hotels">
                     <img src="atento-4.svg" alt="Logo Atento">
