--- a/index.html
+++ b/index.html
@@ -4,265 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KairosPy - Consultoría Estratégica en Datos e IA</title>
-    <style>
-        /* --- RESET Y ESTILOS GLOBALES --- */
-        :root {
-            --color-primario: #151354; /* Azul oscuro del logo */
-            --color-secundario: #12C2AE; /* Dorado/Ámbar del logo */
-            --color-dorado-claro: #FDF8E1; /* Nuevo: Tono dorado claro para el banner */
-            --color-texto: #333333;
-            --color-fondo: #f9f9f9;
-            --fuente-principal: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-        }
-        body {
-            font-family: var(--fuente-principal);
-            background-color: var(--color-fondo);
-            color: var(--color-texto);
-            line-height: 1.7;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 4rem 2rem;
-        }
-        h1, h2, h3 {
-            font-weight: 700;
-            color: var(--color-primario);
-            line-height: 1.3;
-        }
-        h1 { font-size: 3rem; }
-        h2 { font-size: 2.2rem; border-bottom: 2px solid var(--color-secundario); padding-bottom: 10px; margin-top: 3rem; }
-        h3 { font-size: 1.4rem; color: var(--color-primario); margin-top: 2.5rem; }
-        p { font-size: 1.1rem; margin-bottom: 1rem; }
-        a { color: var(--color-secundario); text-decoration: none; font-weight: 600; }
-        a:hover { text-decoration: underline; }        
-
-        /* --- NAVEGACIÓN --- */
-        .main-nav {
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.08);
-            padding: 0.8rem 2rem;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            width: 100%;
-            box-sizing: border-box;
-        }
-        .nav-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1200px; /* Un poco más ancho para la nav */
-            margin: 0 auto;
-        }
-        .nav-logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--color-primario);
-            text-decoration: none;
-        }
-        .main-nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 2rem;
-            align-items: center;
-        }
-        .main-nav ul a {
-            color: var(--color-texto);
-            font-weight: 600;
-            font-size: 1rem;
-        }
-        /* --- SECCIÓN HERO (INTRODUCCIÓN) --- */
-        .hero {
-            background-color: var(--color-dorado-claro);
-            color: var(--color-texto);
-            /* Se elimina el padding aquí para un control más preciso en el .container */
-        }
-        .hero .container {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            gap: 3rem;
-            padding: 2.5rem 2rem; /* Padding vertical reducido para hacer la sección más compacta */
-        }
-        .hero .logo {
-            max-width: 180px; /* Logo ligeramente más pequeño */
-            margin-bottom: 0;
-            flex-shrink: 0;
-        }
-        .hero .concepto {
-            font-style: italic;
-            color: #555;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-        .hero .tagline {
-            font-size: 1.3rem;
-            font-weight: 300;
-            max-width: 700px;
-            color: var(--color-texto);
-        }
-
-        /* --- SECCIÓN "QUIÉNES SOMOS" --- */
-        .quienes-somos {
-            background-color: #ffffff;
-        }
-        .quienes-somos .manifiesto {
-            background-color: #f4f7f6;
-            padding: 1.5rem;
-            border-radius: 8px;
-            border-left: 5px solid var(--color-primario);
-            margin-top: 2rem;
-        }
-
-        /* --- SECCIÓN DE SERVICIOS --- */
-        .servicios-lista ul {
-            list-style: none;
-            padding: 0;
-        }
-        .servicios-lista li {
-            background-color: #ffffff;
-            border: 1px solid #e0e0e0;
-            padding: 1.5rem;
-            margin-bottom: 1rem;
-            border-radius: 8px;
-            transition: box-shadow 0.3s ease, transform 0.3s ease;
-            display: flex;
-            align-items: flex-start;
-            gap: 1.5rem;
-        }
-        .servicios-lista li:hover {
-            box-shadow: 0 8px 25px rgba(0,0,0,0.1);
-            transform: translateY(-5px);
-        }
-        .servicio-icono {
-            flex-shrink: 0;
-        }
-        .servicio-icono img {
-            width: 60px;
-            height: 60px;
-            object-fit: cover;
-            border-radius: 50%;
-            background-color: var(--color-dorado-claro);
-            padding: 5px;
-        }
-
-        /* --- SECCIÓN TECNOLOGÍA --- */
-        .tecnologia {
-            background-color: var(--color-dorado-claro);
-            border-top: 1px solid #e0e0e0;
-        }
-        .tech-logos-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-            gap: 2.5rem;
-            align-items: center;
-            margin-top: 2.5rem;
-        }
-        .tech-logos-grid img {
-            max-height: 50px;
-            width: auto;
-            margin: 0 auto;
-            filter: grayscale(50%);
-            opacity: 0.9;
-            transition: filter 0.3s ease, opacity 0.3s ease;
-        }
-        .tech-logos-grid img:hover {
-            filter: grayscale(0%);
-            opacity: 1;
-        }
-
-        /* --- SECCIÓN CLIENTES --- */
-        .clientes {
-            background-color: #ffffff;
-            border-top: 1px solid #e0e0e0;
-        }
-        .logos-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 2rem;
-            align-items: center;
-            margin-top: 2.5rem;
-        }
-        .logos-grid img {
-            max-width: 100%;
-            height: auto;
-            filter: grayscale(100%);
-            opacity: 0.8;
-            transition: filter 0.3s ease, opacity 0.3s ease;
-        }
-        .logos-grid img:hover {
-            filter: grayscale(0%);
-            opacity: 1;
-        }
-
-        /* --- SECCIÓN CONTACTO --- */
-        .contacto {
-            background-color: var(--color-fondo);
-        }
-        .contact-form {
-            margin-top: 2.5rem;
-            display: grid;
-            gap: 1.5rem;
-            max-width: 700px; /* Limita el ancho del formulario */
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .form-group {
-            display: flex;
-            flex-direction: column;
-        }
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 0.8rem 1rem;
-            font-family: var(--fuente-principal);
-            font-size: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-        .contact-form input:focus,
-        .contact-form textarea:focus {
-            outline: none;
-            border-color: var(--color-secundario);
-            box-shadow: 0 0 0 3px rgba(18, 194, 174, 0.25);
-        }
-        .btn-submit {
-            background-color: var(--color-secundario);
-            color: #ffffff;
-            border: none;
-            padding: 1rem;
-            font-size: 1.1rem;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .btn-submit:hover {
-            background-color: #0f9b8a; /* Un tono más oscuro del secundario */
-        }
-
-        /* --- FOOTER --- */
-        .footer {
-            text-align: center;
-            padding: 4rem 2rem;
-            background-color: var(--color-primario);
-            color: #a0b3c4;
-        }
-        .footer p {
-            margin: 0.5rem 0;
-        }
-        .footer a {
-            color: #ffffff;
-            font-weight: bold;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -270,7 +12,7 @@
         <div class="nav-container">
             <a href="index.html" class="nav-logo">KairosPy</a>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html" class="active">Inicio</a></li>
                 <li><a href="proyectos.html">Proyectos</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
@@ -382,6 +124,7 @@
                     <img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Repsol_logo.svg" alt="Logo Repsol">
                     <img src="https://es.wikipedia.org/wiki/Archivo:Acciona_logo.svg" alt="Logo Acciona">
                     <img src="telefonica-5.svg" alt="Logo Telefónica">
+                    <img src="Endesa.png" alt="Logo Endesa">
                     <img src="nh-hotels.svg" alt="Logo NH Hotels">
                     <img src="atento-4.svg" alt="Logo Atento">
                     <img src="conquer.png" alt="Logo Conquer Blocks">
