--- a/proyectos.html
+++ b/proyectos.html
@@ -3,117 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Proyectos Destacados - KairosPy</title>
-    <style>
-        /* --- ESTILOS GLOBALES Y VARIABLES DE COLOR (Idénticos al resto del sitio) --- */
-        :root {
-            --color-primario: #0B1B2A; /* Azul oscuro del logo */
-            --color-secundario: #D4A017; /* Dorado/Ámbar del logo */
-            --color-texto: #333333;
-            --color-fondo: #f9f9f9;
-            --fuente-principal: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
-        }
-        body {
-            font-family: var(--fuente-principal);
-            background-color: var(--color-fondo);
-            color: var(--color-texto);
-            line-height: 1.7;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 4rem 2rem;
-        }
-        h1, h2, h3, h4 {
-            font-weight: 700;
-            color: var(--color-primario);
-            line-height: 1.3;
-        }
-        h2 { font-size: 2.2rem; border-bottom: 2px solid var(--color-secundario); padding-bottom: 10px; margin-top: 3rem; }
-        h3 { font-size: 1.8rem; }
-        h4 { font-size: 1.2rem; color: var(--color-primario); margin-top: 2rem; margin-bottom: 0.5rem; }
-        p { font-size: 1.1rem; margin-bottom: 1rem; }
-        a { color: var(--color-secundario); text-decoration: none; font-weight: 600; }
-        a:hover { text-decoration: underline; }
 
-        /* --- NAVEGACIÓN (Idéntica al resto del sitio) --- */
-        .main-nav {
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.08);
-            padding: 0.8rem 2rem;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        .nav-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .nav-logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: var(--color-primario);
-            text-decoration: none;
-        }
-        .main-nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 2rem;
-            align-items: center;
-        }
-        .main-nav ul a {
-            color: var(--color-texto);
-            font-weight: 600;
-            font-size: 1rem;
-        }
-        .main-nav ul a.active {
-            color: var(--color-secundario);
-        }
-
-        /* --- ESTILOS ESPECÍFICOS PARA PROYECTOS --- */
-        .page-header {
-            background-color: #ffffff;
-            text-align: center;
-            padding: 3rem 2rem;
-            border-bottom: 1px solid #e0e0e0;
-        }
-        .project-card {
-            background-color: #ffffff;
-            border: 1px solid #e0e0e0;
-            padding: 2.5rem;
-            margin-bottom: 2.5rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
-        }
-        .project-card h3 {
-            margin-top: 0;
-            border-left: 4px solid var(--color-secundario);
-            padding-left: 1rem;
-        }
-        .project-links a {
-            margin-right: 1.5rem;
-            display: inline-block;
-            margin-top: 1rem;
-        }
-        
-        /* --- FOOTER (Idéntico al resto del sitio) --- */
-        .footer {
-            text-align: center;
-            padding: 4rem 2rem;
-            background-color: var(--color-primario);
-            color: #a0b3c4;
-        }
-        .footer p { margin: 0.5rem 0; }
-        .footer a { color: #ffffff; font-weight: bold; }
-
-    </style>
 </head>
 <body>
 
