--- a/primer-articulo.html
+++ b/primer-articulo.html
@@ -7,7 +7,7 @@
     <title>Introducción a JavaScript Moderno - Mi Blog</title>
 </head>
 <body>
-
+    <div id="navbar-placeholder"></div>
     <header>
         <h1>Mi Blog de Tecnología</h1>
     </header>
@@ -30,6 +30,14 @@
     <footer>
         <p>&copy; 2023 Mi Blog. Todos los derechos reservados.</p>
     </footer>
+
+<script>
+    fetch('nav.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('navbar-placeholder').innerHTML = data;
+        });
+</script>
 
 </body>
 </html>
