--- a/equipo.html
+++ b/equipo.html
@@ -11,10 +11,11 @@
 
     <div id="navbar-placeholder"></div>
 
-    <header class="page-header">
+    <header class="hero">
+        <div class="container">
         <h1>El Talento detrás de KairosPy</h1>
-
-
+        </div>
+    </header>
 
         <div class="container">
 
@@ -26,17 +27,21 @@
             Para preservar su identidad, vamos a anonimizar su perfil un poco, aunque no te preocupes, si hay proyecto les conocerás.
         </p>
 
-        </div>
+        
         <div class="manifiesto">
-            <p style="text-align: left;"><strong>Los mejores de cada clase están ya pillados:</strong> 
+            <p style="text-align: left;"><strong>
+                <p>Los mejores de la clase están ya pillados</strong>
                 Es algo que sabemos y salvo que seas Google, Amazon o la empresa más puntera, no vas a poder acceder a ellos... o sí</p>
-            <p style="text-align: left;"><strong>En KairosPy podrás encontrar a algunos de ellos</strong></p>
+            <strong>En KairosPy podrás encontrar a algunos de ellos</strong></p>
         </div>
-    </header>
+
+        </div>
+    
 
 
 
     <main class="container">
+        <h2>Nuestros Profesionales</h2>
         <div class="team-grid">
 
             <article class="profile-card">
