--- a/nav.html
+++ b/nav.html
@@ -1,11 +1,8 @@
 <nav class="main-nav">
-    <div class="nav-container">
-        <a href="index.html" class="nav-logo">KairosPy</a>
+    <div class="container nav-container">
+        <a href="index.html" class="nav-logo">KAIROS<span>PY</span>_</a>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="equipo.html">Equipo</a></li>
-            <li><a href="proyectos.html">Proyectos</a></li>
-            <li><a href="blog.html">Blog</a></li>
-        </ul>
+            <li><a href="index.html">Ops_Center</a></li>
+            <li><a href="equipo.html">Network</a></li> <li><a href="proyectos.html">Case_Files</a></li> <li><a href="blog.html">Intel</a></li> </ul>
     </div>
 </nav>
