--- a/nav.html
+++ b/nav.html
@@ -3,6 +3,9 @@
         <a href="index.html" class="nav-logo">KAIROS<span>PY</span>_</a>
         <ul>
             <li><a href="index.html">Ops_Center</a></li>
-            <li><a href="equipo.html">Network</a></li> <li><a href="proyectos.html">Case_Files</a></li> <li><a href="blog.html">Intel</a></li> </ul>
+            <li><a href="equipo.html">Network</a></li>
+            <li><a href="proyectos.html">Case_Files</a></li>
+            <li><a href="blog.html">Intel</a></li>
+        </ul>
     </div>
 </nav>
