--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 
     <header class="hero">
         <div class="container hero-content">
-            <span class="tagline">> NETWORK_STATUS: ACTIVE // NODE_ID: KAIROSPY</span>
+            <div style="font-family: var(--font-code); color: var(--accent-primary); margin-bottom: 1.5rem; font-size: 0.9rem; opacity: 0.8;">
+                > DEFINITION: KAIROS (καιρός) // "The critical moment for action."
+            </div>
+            
             <h1>Orchestrating Elite<br>Technical Solutions.</h1>
+            
             <p class="sub-hero">
                 We are a decentralized collective of senior engineers and strategists.
-                We deploy surgical expertise across critical technology sectors.
-                <strong>Select your operational requirement below.</strong>
+                We deploy surgical expertise precisely when the window of opportunity opens.
             </p>
         </div>
     </header>
